--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
+    "request": "^2.81.0",
+    "request-promise-native": "^1.0.4",
     "web3": "^0.20.1"
   }
 }
